Bug 220693 - soft breaks are handled as paragraph breaks
Summary: soft breaks are handled as paragraph breaks
Status: RESOLVED FIXED
Alias: None
Product: kword
Classification: Unmaintained
Component: opendocument (other bugs)
Version First Reported In: 2.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Zander
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-30 15:28 UTC by Silver Salonen
Modified: 2010-03-14 22:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
example of a line-break (7.32 KB, application/vnd.oasis.opendocument.text)
2009-12-30 15:31 UTC, Silver Salonen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2009-12-30 15:28:45 UTC
Version:           2.1.0 (using Devel)
OS:                Linux
Installed from:    Compiled sources

I created an ODT document in OOo 3.1 with a line-break, but KOffice handles the break as paragraph-break.
Comment 1 Silver Salonen 2009-12-30 15:31:18 UTC
Created attachment 39459 [details]
example of a line-break

Paragraph has a few space (10-20 inches) before paragraph, but line-break should let the next line stay within the paragraph. In KOffice's case the before-space is applied to both lines.
Comment 2 Thomas Zander 2010-03-14 22:08:37 UTC
SVN commit 1103333 by zander:

Fix loading a soft-break

A text:line-break tag in ODF is a soft break, load it as such.
BUG:220693

 M  +1 -1      KoTextLoader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1103333