Fix loading a soft-break

A text:line-break tag in ODF is a soft break, load it as such.
BUG:220693

svn path=/trunk/koffice/; revision=1103333